update to about section

--- a/about.html
+++ b/about.html
@@ -16,44 +16,56 @@
 
 <body>
     <!-- about section start -->
-    <div class="about-section MT-">
-        <h1 class="about_us text-center">ABOUT US</h1>
+    <div class="about-section bg-dark">
+        <h1 class="about_us  text-center">ABOUT US</h1>
 
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <div class="row">
-                <div class="col-md-6 col-12 bg-danger">
-                    <h5 class="about-left-headLine text-center ">Corporate Profile</h5>
-                    <div class=" about-left">
-                        <p class="about-left-paregraph">Dhaka Choice Ltd is one of the largest online business platforms
-                            in Bangladesh. We are the
-                            top e-commerce company in
-                            Bangladesh. Launched in 2021, the online store offers the widest range of products in
-                            categories ranging from
-                            electronics to household appliances, latest smart phones, Camera, Computing & accessories
-                            fashion, health equipment and
-                            makeup. Among the spacious and growing strategic business units of the giant Dhaka Choice
-                            Ld, We are here to grow your
-                            business; also we provided the necessary guidelines that will help you to sell increasing
-                            your product and your service.
-                            We offer the best service that helps you to achieve you goal on a larger scale. We handled
-                            your service so
-                            professionally and creatively.
-                            Dhaka Choice Ltd believes in “Delivering Happiness” with an excellent customer experience
-                            thus provides the most
-                            efficient delivery service through own logistics so that customers get a hassle-free product
-                            delivery at their doorstep.
-                            We help our local and international vendors as well as 200 brands serving thousands of
-                            consumers from all over
-                            Bangladesh. We also offer free returns and various payment methods including Cash on
-                            delivery, Online Payments, Card on
-                            delivery and bKash with all of our products.
-                            Follow us on Facebook, Twitter, Instrgram, Youtube to stay updated about our latest offers
-                            and promotions. Happy Online
-                            Service!
-                        </p>
+                <div class="col-md-8 col-12 d-flex flex-column justify-content-center align-items-end">
+                    <div class="">
+                        <h5 class="about-left-headLine">Corporate Profile</h5>
+                        <div class=" about-left  ">
+                            <p class="about-left-paregraph">Dhaka Choice Ltd is one of the largest online
+                                business platforms
+                                in Bangladesh. We are the
+                                top e-commerce company in
+                                Bangladesh. Launched in 2021, the online store offers the widest range of products in
+                                categories ranging from
+                                electronics to household appliances, latest smart phones, Camera, Computing &
+                                accessories
+                                fashion, health equipment and
+                                makeup. Among the spacious and growing strategic business units of the giant Dhaka
+                                Choice
+                                Ld, We are here to grow your
+                                business; also we provided the necessary guidelines that will help you to sell
+                                increasing
+                                your product and your service.
+                                We offer the best service that helps you to achieve you goal on a larger scale. We
+                                handled
+                                your service so
+                                professionally and creatively.
+                                Dhaka Choice Ltd believes in “Delivering Happiness” with an excellent customer
+                                experience
+                                thus provides the most
+                                efficient delivery service through own logistics so that customers get a hassle-free
+                                product
+                                delivery at their doorstep.
+                                We help our local and international vendors as well as 200 brands serving thousands of
+                                consumers from all over
+                                Bangladesh. We also offer free returns and various payment methods including Cash on
+                                delivery, Online Payments, Card on
+                                delivery and bKash with all of our products.
+                                Follow us on Facebook, Twitter, Instrgram, Youtube to stay updated about our latest
+                                offers
+                                and promotions. Happy Online
+                                Service!
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-12 bg-secondary">Right</div>
+                <div class="col-md-4 col-12 flex about_img">
+                    <img src="./images/about_img.png" alt="" class="mb-4">
+                </div>
             </div>
         </div>
 
