add to about section second slide

--- a/about.html
+++ b/about.html
@@ -16,16 +16,17 @@
 
 <body>
     <!-- about section start -->
-    <div class="about-section bg-dark">
-        <h1 class="about_us  text-center">ABOUT US</h1>
 
+    <!-- first slide -->
+    <div class="first_slide_section bg-dark">
+        <h1 class="first_slide_title  text-center">ABOUT US</h1>
         <div class="container-fluid ">
             <div class="row">
-                <div class="col-md-8 col-12 d-flex flex-column justify-content-center align-items-end">
+                <div class="col-8  d-flex flex-column justify-content-center align-items-end">
                     <div class="">
-                        <h5 class="about-left-headLine">Corporate Profile</h5>
-                        <div class=" about-left  ">
-                            <p class="about-left-paregraph">Dhaka Choice Ltd is one of the largest online
+                        <h5 class="first_slide_left_headLine">Corporate Profile</h5>
+                        <div class=" first_slide_left  ">
+                            <p class="first_slide_left_parefraph">Dhaka Choice Ltd is one of the largest online
                                 business platforms
                                 in Bangladesh. We are the
                                 top e-commerce company in
@@ -63,15 +64,54 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-12 flex about_img">
-                    <img src="./images/about_img.png" alt="" class="mb-4">
+                <div class="col-4">
+                    <img src="./images/about_img.png" alt="" class="first_slide_img img-fluid">
                 </div>
             </div>
         </div>
+    </div>
+
+
+    <!-- second slide -->
+    <div class=" second_slide_parent_section">
+        <div class=" bg-secdondary second_slide_left">
+            <img src="./images/second_slide_img.png" alt="" class="second_slide_img">
+        </div>
+        <div class=" second_slide_right">
+            <div>
+                <h4 class="text-center text-light second_slide_left_title ">Who we are</h4>
+                <p class="second_slide_right_paragraph">
+                    This is the first time in Bangladesh that customers can buy products directly from any retail store
+                    and get discounts
+                    and reward points. Dhaka Choice Ltd is a Online Business Platform, a sister concern of Jamal Foods
+                    and Chemical Ltd.
+                    Dhaka Choice Ltd focuses on Ultimate one stop shopping experience, Most trusted online shopping
+                    platform, Most trusted
+                    online business partner, Respected service provider, Wide selection of the best local and foreign
+                    brand, Fastest
+                    delivery service, Genuine and authentic products,
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- third slide -->
+    <div class="trird_slide_section">
+        <div class="third_slide_black_div">
+            <h4 class=" text-white third_slide_title">What we do</h4>
+        </div>
+        <div class="third_slide_triangle"></div>
+        <div class="third_slide_flex_div">
+            <div class="left_colom">left</div>
+            <div class="right_colom">right</div>
+        </div>
+        <div class="square"></div>
 
     </div>
 
-    <!-- about section start -->
+
+
+    <!--  -->
 
 
     <!-- Bootstrap JS link -->
