--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- owl carousal Css link -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css">
+
     <title>Document</title>
 </head>
 
@@ -19,18 +25,21 @@
 
     <!-- first slide -->
     <div class="first_slide_section bg-dark">
-        <h1 class="first_slide_title  text-center">ABOUT US</h1>
+        <div>
+            <h1 class="first_slide_title  text-center">ABOUT US</h1>
+        </div>
         <div class="container-fluid ">
             <div class="row">
-                <div class="col-8  d-flex flex-column justify-content-center align-items-end">
-                    <div class="">
-                        <h5 class="first_slide_left_headLine">Corporate Profile</h5>
-                        <div class=" first_slide_left  ">
+                <div class="col-8 d-flex flex-column justify-content-center align-items-end">
+                    <div class=" first_slide_left  ">
+                        <div>
+                            <h5 class="first_slide_left_headLine">Corporate Profile</h5>
                             <p class="first_slide_left_parefraph">Dhaka Choice Ltd is one of the largest online
                                 business platforms
                                 in Bangladesh. We are the
                                 top e-commerce company in
-                                Bangladesh. Launched in 2021, the online store offers the widest range of products in
+                                Bangladesh. Launched in 2021, the online store offers the widest range of products
+                                in
                                 categories ranging from
                                 electronics to household appliances, latest smart phones, Camera, Computing &
                                 accessories
@@ -51,7 +60,8 @@
                                 efficient delivery service through own logistics so that customers get a hassle-free
                                 product
                                 delivery at their doorstep.
-                                We help our local and international vendors as well as 200 brands serving thousands of
+                                We help our local and international vendors as well as 200 brands serving thousands
+                                of
                                 consumers from all over
                                 Bangladesh. We also offer free returns and various payment methods including Cash on
                                 delivery, Online Payments, Card on
@@ -64,8 +74,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <img src="./images/about_img.png" alt="" class="first_slide_img img-fluid">
+                <div class="col-4 first_slide_img">
+                    <img src="./images/about_img.png" alt="">
                 </div>
             </div>
         </div>
@@ -77,20 +87,25 @@
         <div class=" bg-secdondary second_slide_left">
             <img src="./images/second_slide_img.png" alt="" class="second_slide_img">
         </div>
-        <div class=" second_slide_right">
-            <div>
-                <h4 class="text-center text-light second_slide_left_title ">Who we are</h4>
-                <p class="second_slide_right_paragraph">
-                    This is the first time in Bangladesh that customers can buy products directly from any retail store
-                    and get discounts
-                    and reward points. Dhaka Choice Ltd is a Online Business Platform, a sister concern of Jamal Foods
-                    and Chemical Ltd.
-                    Dhaka Choice Ltd focuses on Ultimate one stop shopping experience, Most trusted online shopping
-                    platform, Most trusted
-                    online business partner, Respected service provider, Wide selection of the best local and foreign
-                    brand, Fastest
-                    delivery service, Genuine and authentic products,
-                </p>
+        <div class=" second_slide_right ">
+            <div class="d-flex">
+                <div class="second_slide_body">
+                    <h4 class="my-3 py-2 text-center text-light second_slide_left_title ">Who we are</h4>
+                    <p class="second_slide_right_paragraph">
+                        This is the first time in Bangladesh that customers can buy products directly from any retail
+                        store
+                        and get discounts
+                        and reward points. Dhaka Choice Ltd is a Online Business Platform, a sister concern of Jamal
+                        Foods
+                        and Chemical Ltd.
+                        Dhaka Choice Ltd focuses on Ultimate one stop shopping experience, Most trusted online shopping
+                        platform, Most trusted
+                        online business partner, Respected service provider, Wide selection of the best local and
+                        foreign
+                        brand, Fastest
+                        delivery service, Genuine and authentic products,
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -102,11 +117,147 @@
         </div>
         <div class="third_slide_triangle"></div>
         <div class="third_slide_flex_div">
-            <div class="left_colom">left</div>
-            <div class="right_colom">right</div>
+            <div class="left_colom">
+                <h3 class="text-center text-light left_colom_heding">B2C</h3>
+            </div>
+            <div class="right_colom">
+                <p class="right_colom">B2C is a kind of product purchasing apps; Customers will be able to purchase
+                    products using
+                    their apps by connecting
+                    directly to the shopper's apps. A customer can avail discounts by purchasing products from any
+                    retail store using this
+                    app. A shopkeeper can purchase products from any retail store and get discounts and reward points,
+                    Such as: grocery
+                    store, drug store, clothing store, cosmetic store, food store, restaurant, etc.</p>
+            </div>
         </div>
         <div class="square"></div>
 
+    </div>
+
+    <!-- owl-carousel  start-->
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <div class="first_slide_section bg-dark">
+                <h1 class="first_slide_title  text-center">ABOUT US</h1>
+                <div class="container-fluid ">
+                    <div class="row">
+                        <div class="col-8  d-flex flex-column justify-content-center align-items-end">
+                            <div class="">
+                                <h5 class="first_slide_left_headLine">Corporate Profile</h5>
+                                <div class=" first_slide_left  ">
+                                    <p class="first_slide_left_parefraph">Dhaka Choice Ltd is one of the largest online
+                                        business platforms
+                                        in Bangladesh. We are the
+                                        top e-commerce company in
+                                        Bangladesh. Launched in 2021, the online store offers the widest range of
+                                        products in
+                                        categories ranging from
+                                        electronics to household appliances, latest smart phones, Camera, Computing &
+                                        accessories
+                                        fashion, health equipment and
+                                        makeup. Among the spacious and growing strategic business units of the giant
+                                        Dhaka
+                                        Choice
+                                        Ld, We are here to grow your
+                                        business; also we provided the necessary guidelines that will help you to sell
+                                        increasing
+                                        your product and your service.
+                                        We offer the best service that helps you to achieve you goal on a larger scale.
+                                        We
+                                        handled
+                                        your service so
+                                        professionally and creatively.
+                                        Dhaka Choice Ltd believes in “Delivering Happiness” with an excellent customer
+                                        experience
+                                        thus provides the most
+                                        efficient delivery service through own logistics so that customers get a
+                                        hassle-free
+                                        product
+                                        delivery at their doorstep.
+                                        We help our local and international vendors as well as 200 brands serving
+                                        thousands of
+                                        consumers from all over
+                                        Bangladesh. We also offer free returns and various payment methods including
+                                        Cash on
+                                        delivery, Online Payments, Card on
+                                        delivery and bKash with all of our products.
+                                        Follow us on Facebook, Twitter, Instrgram, Youtube to stay updated about our
+                                        latest
+                                        offers
+                                        and promotions. Happy Online
+                                        Service!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <img src="./images/about_img.png" alt="" class="first_slide_img img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class=" second_slide_parent_section">
+                <div class=" bg-secdondary second_slide_left">
+                    <img src="./images/second_slide_img.png" alt="" class="second_slide_img">
+                </div>
+                <div class=" second_slide_right">
+                    <div>
+                        <h4 class="text-center text-light second_slide_left_title ">Who we are</h4>
+                        <p class="second_slide_right_paragraph">
+                            This is the first time in Bangladesh that customers can buy products directly from any
+                            retail store
+                            and get discounts
+                            and reward points. Dhaka Choice Ltd is a Online Business Platform, a sister concern of Jamal
+                            Foods
+                            and Chemical Ltd.
+                            Dhaka Choice Ltd focuses on Ultimate one stop shopping experience, Most trusted online
+                            shopping
+                            platform, Most trusted
+                            online business partner, Respected service provider, Wide selection of the best local and
+                            foreign
+                            brand, Fastest
+                            delivery service, Genuine and authentic products,
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/QR_code.png" alt="" style="height: 650px;">
+        </div>
+        <div class="item">
+            <div class=" second_slide_parent_section">
+                <div class=" bg-secdondary second_slide_left">
+                    <img src="./images/second_slide_img.png" alt="" class="second_slide_img">
+                </div>
+                <div class=" second_slide_right">
+                    <div>
+                        <h4 class="text-center text-light second_slide_left_title ">Who we are</h4>
+                        <p class="second_slide_right_paragraph">
+                            This is the first time in Bangladesh that customers can buy products directly from any
+                            retail store
+                            and get discounts
+                            and reward points. Dhaka Choice Ltd is a Online Business Platform, a sister concern of Jamal
+                            Foods
+                            and Chemical Ltd.
+                            Dhaka Choice Ltd focuses on Ultimate one stop shopping experience, Most trusted online
+                            shopping
+                            platform, Most trusted
+                            online business partner, Respected service provider, Wide selection of the best local and
+                            foreign
+                            brand, Fastest
+                            delivery service, Genuine and authentic products,
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/QR_code.png" alt="" style="height: 650px;">
+        </div>
     </div>
 
 
@@ -118,6 +269,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!-- owl carousal js and jquarry link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js"></script>
+    <script>
+
+
+        $(document).ready(function () {
+            $(".owl-carousel").owlCarousel({
+                loop: true,
+                margin: 10,
+                nav: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 1
+                    },
+                    1000: {
+                        items: 1
+                    }
+                }
+            });
+        });
+    </script>
 
 </body>
 
