--- a/index.html
+++ b/index.html
@@ -26,34 +26,36 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
     <title>Document</title>
 </head>
 
 <body>
     <!-- Status Bar Section Start -->
     <div class="container-fluid">
-        <div class="row bg-danger ">
+        <div class="row bg-danger
+         py-2 ">
             <div class="col-md-6 col-12 d-flex justify-content-start status-bar-left">
                 <li>Contact</li>
                 <li><i class="fas fa-envelope"></i></li>
                 <li>dhaka.choice@gmail.com</li>
             </div>
             <div class="col-md-6 col-12 d-flex justify-content-end status-bar-right ">
-                <li>Follow Us </li>
-                <li><i class="fab fa-facebook"></i></li>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fab fa-instagram"></i></li>
-                <li><i class="fab fa-youtube"></i></li>
-                <li><i class="fab fa-skype"></i></li>
-                <li><i class="fab fa-whatsapp"></i></li>
+                <p class="follow_us">Follow Us</p>
+                <a class="link" href=""><i class="fab fa-facebook"></i></a>
+                <a class="link" href=""><i class="fab fa-twitter"></i></a>
+                <a class="link" href=""><i class="fab fa-instagram"></i></a>
+                <a class="link" href=""><i class="fab fa-youtube"></i></a>
+                <a class="link" href=""><i class="fab fa-skype"></i></a>
+                <a class="link" href=""><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
     <!-- Status Bar Section End -->
     <!-- Image Category Slider Start -->
     <div class="container-fluid mt-2">
-        <div class="row">
-            <div class="col-md-2 col-3">
+        <div class="row my-3">
+            <div class="col-md-2 col-3 logo_body">
                 <div class="col-3 nav-logo">
                     <img src="./images/logo.png" alt="">
                 </div>
@@ -72,7 +74,7 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item mb-4">
+                    <div class="item ">
                         <div class="card border-0 " style="width: 70%;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/electronics.png"
                                 alt="" class="card-img-top mx-auto">
@@ -84,7 +86,7 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item mb-4">
+                    <div class="item ">
                         <div class="card border-0 " style="width: 70%;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/food.png" alt=""
                                 class="card-img-top mx-auto">
@@ -96,7 +98,7 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item mb-4">
+                    <div class="item ">
                         <div class="card border-0 " style="width: 70%;">
                             <img style="border-radius: 50%; width: 100px; height:100px"
                                 src="./images/hardware-store.png" alt="" class="card-img-top mx-auto">
@@ -108,7 +110,7 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item mb-4">
+                    <div class="item ">
                         <div class="card border-0 " style="width: 70%;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/medical-shop.png"
                                 alt="" class="card-img-top mx-auto">
@@ -120,7 +122,7 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item mb-4">
+                    <div class="item ">
                         <div class="card border-0 " style="width: 70%;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/mudi.png" alt=""
                                 class="card-img-top mx-auto">
@@ -230,6 +232,143 @@
         </button>
     </div>
     <!-- slider end -->
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-twitter"></i></a>
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+                <!-- youtube -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-youtube"></i></a>
+
+
+                <!-- skype -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-skype"></i></a>
+
+                <!-- What's app -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-whatsapp"></i></a>
+
+
+            </section>
+            <!-- Section: Social media -->
+
+
+
+            <!-- Section: Text -->
+            <section class="mb-4">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+                    repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+                    eum harum corrupti dicta, aliquam sequi voluptate quas.
+                </p>
+            </section>
+            <!-- Section: Text -->
+
+            <!-- Section: Links -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 mx-auto">
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 3</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 3</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 3</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#!" class="text-white">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">Link 3</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2020 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">dhakachoice.com</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
+
+
 
 
 
@@ -251,6 +390,7 @@
     <script src="js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
 
 
     <script>
