update js css owl carusal local library

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <img src="./images/second_slide_img.png" alt="" class="second_slide_img">
         </div>
         <div class=" second_slide_right ">
-            <div class="d-flex">
+            <div class="d-flex justify-content-center align-items-center">
                 <div class="second_slide_body">
                     <h4 class="my-3 py-2 text-center text-light second_slide_left_title ">Who we are</h4>
                     <p class="second_slide_right_paragraph">
@@ -270,7 +270,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <!-- owl carousal js and jquarry link -->
+    <!-- owl carousal js and jquery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js"></script>
     <script>
