--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li>dhaka.choice@gmail.com</li>
             </div>
             <div class="col-md-6 col-12 d-flex justify-content-end status-bar-right ">
-                <p class="follow_us">Follow Us</p>
+                <p class="follow_us ">Follow Us</p>
                 <a class="link" href=""><i class="fab fa-facebook"></i></a>
                 <a class="link" href=""><i class="fab fa-twitter"></i></a>
                 <a class="link" href=""><i class="fab fa-instagram"></i></a>
@@ -227,6 +227,7 @@
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
         <div class="container p-4">
+            <p class="text-uppercase fw-bolder">Follow Us :</p>
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
@@ -273,7 +274,7 @@
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 mx-auto">
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
 
                         <ul class="list-unstyled mb-0">
