--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- css style link -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- owl carousal min.css -->
-    <link rel="stylesheet" href="/css/owl.carousel.min.css">
-    <!-- owl carousal theme min.css -->
-    <link rel="stylesheet" href="/css/owl.theme.default.min.css"> <!-- google font awesome link -->
+    <!-- Font Woesome link -->
     <script src="https://kit.fontawesome.com/a796f0c56e.js" crossorigin="anonymous"></script>
+
+    <!-- owl carousal min.css -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
     <!-- Bootstrap CSS link -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,16 +46,16 @@
     <!-- Status Bar Section End -->
     <!-- Image Category Slider Start -->
     <div class="container-fluid mt-2">
-        <div class="row my-3">
-            <div class="col-md-2 col-3 logo_body">
+        <div class="row my-2">
+            <div class="col-md-2 col-4 logo_body">
                 <div class="col-3 nav-logo">
-                    <img src="./images/logo.png" alt="">
+                    <img src="./images/logo.png" alt="" class="image-fluide">
                 </div>
             </div>
-            <div class="col-md-10 col-9">
-                <div class=" owl-carousel owl-theme">
-                    <div class="item">
-                        <div class="card border-0 " style="width: 70%;">
+            <div class="col-md-10 col-8">
+                <div class="owl-carousel owl-theme">
+                    <div class="item ">
+                        <div class="card border-0 " style="width: 70%; margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/cloth_store.png"
                                 alt="" class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -66,7 +67,7 @@
                     </div>
                     <!-- card end -->
                     <div class="item ">
-                        <div class="card border-0 " style="width: 70%;">
+                        <div class="card border-0 " style="width: 70%;margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/electronics.png"
                                 alt="" class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -78,7 +79,7 @@
                     </div>
                     <!-- card end -->
                     <div class="item ">
-                        <div class="card border-0 " style="width: 70%;">
+                        <div class="card border-0 " style="width: 70%;margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/food.png" alt=""
                                 class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -90,7 +91,7 @@
                     </div>
                     <!-- card end -->
                     <div class="item ">
-                        <div class="card border-0 " style="width: 70%;">
+                        <div class="card border-0 " style="width: 70%;margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px"
                                 src="./images/hardware-store.png" alt="" class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -102,7 +103,7 @@
                     </div>
                     <!-- card end -->
                     <div class="item ">
-                        <div class="card border-0 " style="width: 70%;">
+                        <div class="card border-0 " style="width: 70%;margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/medical-shop.png"
                                 alt="" class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -113,8 +114,8 @@
                         </div>
                     </div>
                     <!-- card end -->
-                    <div class="item ">
-                        <div class="card border-0 " style="width: 70%;">
+                    <div class="item">
+                        <div class="card border-0 " style="width: 70%;margin: auto;">
                             <img style="border-radius: 50%; width: 100px; height:100px" src="./images/mudi.png" alt=""
                                 class="card-img-top mx-auto">
                             <div class="card-body p-0">
@@ -274,7 +275,7 @@
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
 
                         <ul class="list-unstyled mb-0">
@@ -292,7 +293,7 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
 
                         <ul class="list-unstyled mb-0">
@@ -310,7 +311,7 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
 
                         <ul class="list-unstyled mb-0">
@@ -327,7 +328,7 @@
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Links</h5>
 
                         <ul class="list-unstyled mb-0">
@@ -365,37 +366,38 @@
 
 
 
+
+
     <!-- js file  -->
     <script src="./index.js"></script>
 
-    <!-- j Query cdn -->
-    <script src="/js/jquery.min.js"></script>
-
-    <!-- wol carousel min.js -->
-    <script src="/js/owl.carousel.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
 
     <!-- Bootstrap JS link -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-
-
+    <script src="/js/bootstrap.bundle.min.js"></script>
 
     <script>
         $('.owl-carousel').owlCarousel({
             loop: true,
-            margin: 5,
-            nav: true,
+            margin: 10,
+            nav: false,
+            autoplay: false,
+            autoplayTimeout: 1000,
+            stagePadding: 50,
+            dots: false,
             responsive: {
                 0: {
-                    items: 2
+                    items: 1
                 },
                 400: {
-                    items: 3
+                    items: 2
                 },
                 600: {
-                    items: 4
+                    items: 3
                 },
                 1000: {
-                    items: 7
+                    items: 5
                 }
             }
         })
