--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
         </div>
     </div>
     </div>
-
     <!-- Image Category Slider End -->
-
     <!-- Navbar Section Start  -->
     <nav class="navbar navbar-expand-lg nav-bg-color">
         <div class="container-fluid">
@@ -141,9 +139,7 @@
             <button class="navbar-toggler navbar-togglers" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mx-4 mb-lg-0 ">
@@ -195,10 +191,6 @@
         </div>
     </nav>
     <!-- Navbar Section End -->
-
-
-
-
     <!-- slider start -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -224,6 +216,23 @@
         </button>
     </div>
     <!-- slider end -->
+
+    <!--  chat icon functionality start  -->
+    <button class="open-button" onclick="openForm()">Chat</button>
+
+    <div class="chat-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+            <h3 class="chat_heading text-danger">Chat with company</h3>
+
+            <label for="msg"><b>Message</b></label>
+            <textarea placeholder="Type message.." name="msg" required></textarea>
+
+            <button type="submit" class="btn">Send</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+    </div>
+    <!--chat icon functionality end  -->
+
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
@@ -375,8 +384,7 @@
     <script src="js/owl.carousel.min.js"></script>
 
     <!-- Bootstrap JS link -->
-    <script src="/js/bootstrap.bundle.min.js"></script>
-
+    <script src="/js/bootstrap.min.js"></script>
     <script>
         $('.owl-carousel').owlCarousel({
             loop: true,
@@ -401,6 +409,15 @@
                 }
             }
         })
+
+        //  Chat js file start hare
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+        }
+
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+        }
     </script>
 </body>
 
