update navbar truggeler

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
+
+    </style>
+
     <title>Document</title>
 </head>
 
@@ -136,7 +139,7 @@
     <nav class="navbar navbar-expand-lg nav-bg-color">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler navbar-togglers" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler ml-auto custom-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -390,7 +393,7 @@
             loop: true,
             margin: 10,
             nav: false,
-            autoplay: false,
+            autoplay: true,
             autoplayTimeout: 1000,
             stagePadding: 50,
             dots: false,
